# FINESSE

./: .editorconfig  .flake8  .gitignore  .markdownlint.yaml  .mlc_config.json  .pre-commit-config.yaml  404.html  FINESSE.spec  FROG.spec  README.md  codecov.yml  gen_ref_nav.py  gen_state_machine_diagrams.py  gen_user_guide.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  stub.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/build-docs/: action.yml
.github/actions/build-win-exe/: action.yml
.github/actions/setup/: action.yml
.github/workflows/: check-links.yml  ci.yml  docs.yml  release.yml
FINESSE_GUI/serial/: serial_view.py
decades/: index.html
docs/: .gitignore  decades.md  fallback.html  gen_ref_nav.py  gen_state_machine_diagrams.py  gen_user_guide.py  hardware.md  hardware_sets.md  measure_scripts.md  user_guide.md
finesse/: __init__.py  __main__.py  config.py  device_info.py  device_type.py  em27_info.py  em27_property.py  em27_status.py  event_counter.py  logger.py  sensor_reading.py  settings.py  spectrometer_status.py
finesse/gui/: __init__.py  data_file_view.py  decades_monitor.py  device_connection.py  device_panel.py  device_view.py  docs_view.py  em27_monitor.py  error_message.py  event_counter.py  interferometer_monitor.py  led_icon.py  led_icons.py  logs_view.py  main_window.py  measure_script.py  opus_view.py  path_widget.py  script_edit_dialog.py  script_view.py  sensors_panel.py  serial_device_panel.py  serial_view.py  spectrometer_view.py  stepper_motor_view.py  temp_control.py  temperature_controller_view.py  temperature_monitor_view.py  temperature_plot.py  uncaught_exceptions.py
finesse/gui/hardware_set/: __init__.py  device.py  device_connection.py  device_view.py  dummy.yaml  dummy_ftsw500.yaml  finesse.yaml  finesse_dp9800.yaml  finesse_dummy.yaml  finesse_seneca.yaml  hardware_set.py  hardware_sets_combo_box.py  hardware_sets_view.py
finesse/gui/images/: __init__.py
finesse/gui/measure_script/: __init__.py  __main__.py  count_widget.py  parse.py  script.py  script_edit_dialog.py  script_path_widget.py  script_run_dialog.py  script_view.py  sequence_widget.py
finesse/hardware/: __init__.py  data_file_writer.py  device.py  device_base.py  devices.py  dp9800.py  dummy_dp9800.py  dummy_em27_diag_autom.py  dummy_em27_scraper.py  dummy_opus.py  dummy_stepper_motor.py  dummy_tc4820.py  dummy_temperature_controller.py  em27.py  em27_diag_autom.py  em27_opus.py  em27_scraper.py  http_requester.py  manage_devices.py  noise_producer.py  opus_interface_base.py  pubsub_decorators.py  serial_device.py  serial_manager.py  st10_controller.py  stepper_motor_base.py  tc4820.py  tc4820_base.py  temperature_controller_base.py
finesse/hardware/opus/: __init__.py  dummy.py  em27.py  opus_interface_base.py
finesse/hardware/plugins/: __init__.py
finesse/hardware/stepper_motor/: __init__.py  dummy.py  st10_controller.py  stepper_motor_base.py
finesse/hardware/temperature/: __init__.py  dp9800.py  dummy_dp9800.py  dummy_temperature_controller.py  dummy_temperature_monitor.py  seneca.py  tc4820.py  temperature_controller_base.py  temperature_monitor_base.py
finesse/serial/: serial_view.py
frog/: __init__.py  __main__.py  config.py  device_info.py  logger.py  sensor_reading.py  settings.py
frog/gui/: __init__.py  data_file_view.py  device_panel.py  docs_view.py  event_counter.py  led_icon.py  logs_view.py  main_window.py  path_widget.py  sensors_panel.py  spectrometer_view.py  stepper_motor_view.py  temperature_controller_view.py  temperature_monitor_view.py  temperature_plot.py  uncaught_exceptions.py
frog/gui/hardware_set/: __init__.py  device.py  device_view.py  dummy.yaml  hardware_set.py  hardware_sets_combo_box.py  hardware_sets_view.py  menu.py
frog/gui/measure_script/: count_widget.py  script.py  script_edit_dialog.py  script_run_dialog.py  script_view.py  sequence_widget.py
frog/hardware/: __init__.py  data_file_writer.py  device.py  http_requester.py  manage_devices.py  serial_device.py
hardware/: index.html
hardware_sets/: index.html
measure_scripts/: index.html
reference/SUMMARY/: index.html
reference/finesse/: index.html
reference/finesse/config/: index.html
reference/finesse/device_info/: index.html
reference/finesse/em27_property/: index.html
reference/finesse/gui/: index.html
reference/finesse/hardware/: index.html
reference/finesse/logger/: index.html
reference/finesse/sensor_reading/: index.html
reference/finesse/settings/: index.html
reference/finesse/spectrometer_status/: index.html
search/: search_index.json
tests/: __init__.py  conftest.py  test_dummy_em27_diag_autom.py  test_dummy_em27_scraper.py  test_dummy_opus.py  test_dummy_tc4820.py  test_dummy_temperature_controller.py  test_em27_diag_autom.py  test_em27_opus.py  test_em27_scraper.py  test_event_counter.py  test_measure_script.py  test_noise_producer.py  test_st10_controller.py  test_stepper_motor.py  test_tc4820.py
tests/gui/: test_data_file_view.py  test_device_connection.py  test_device_info.py  test_device_panel.py  test_event_counter.py  test_path_widget.py  test_recording_widget.py  test_sensors_panel.py  test_serial_device_panel.py  test_serial_view.py  test_stepper_motor_view.py
tests/gui/hardware_set/: conftest.py  test_device_connection.py  test_device_control.py  test_device_parameters_widget.py  test_device_type_control.py  test_hardware_set.py  test_hardware_sets_combo_box.py  test_hardware_sets_view.py  test_hwset_device.py  test_menu.py
tests/gui/measure_script/: conftest.py  test_measure_script.py  test_script.py  test_script.yaml  test_script_edit_dialog.py  test_script_path_widget.py  test_script_run_dialog.py  test_script_runner.py  (+2 more)
tests/hardware/: test_data_file_writer.py  test_device.py  test_em27_webscraper.py  test_http_requester.py  test_manage_devices.py  test_noise_producer.py  test_pubsub_decorators.py  test_serial_device.py  test_serial_manager.py  test_serial_manager_creation.py  test_st10_controller.py  test_stepper_motor.py
user_guide/: index.html
(+182 files in other folders)
