[tool.poetry]
name = "FINESSE"
version = "2.0.0"
description = "A graphical user interface for controlling and monitoring an interferometer device."
authors = [
    "Alex Dewar <a.dewar@imperial.ac.uk>",
    "Diego Alonso Álvarez <d.alonso-alvarez@imperial.ac.uk>",
    "Dan Cummins <daniel.cummins17@imperial.ac.uk>",
    "Callum West <c.west@imperial.ac.uk>",
    "James Turner <james.turner@imperial.ac.uk>",
    "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>",
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
PySide6 = "^6.8.0"
matplotlib = "^3.9.2"
platformdirs = "^4.2.2"
pypubsub = "^4.0.3"
pyyaml = "^6.0"
schema = "^0.7.7"
pyserial = "^3.5"
beautifulsoup4 = "^4.12.3"
python-statemachine = "^2.3.6"
numpy = "^2.1.3"
decorator = "^5.1.1"
pycsvy = "^0.2.2"
frozendict = "^2.4.6"
crc = "^7.0.0"
ntplib = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0.0"
pytest-mock = "^3.14.0"
pre-commit = "^4.0.1"
pyinstaller = "^6.11.0"
types-pyyaml = "^6.0.12.20240311"
types-beautifulsoup4 = "^4.12.0.20240511"
pytest-qt = "^4.4.0"
types-decorator = "^5.1.8.20240310"
pydot = "^3.0.2"
ruff = "^0.7.1"
freezegun = "^1.5.1"
mypy = "^1.13.0"
pytest-xdist = { extras = ["psutil"], version = "^3.6.1" }

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings = "^0.26.2"
mkdocstrings-python = "^1.12.2"
mkdocs-material = "^9.5.43"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.9"

[tool.ruff]
target-version = "py311"
lint.select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
lint.pydocstyle.convention = "google"

[tool.mypy]
# Some of the docs scripts give errors, but we don't care
exclude = "docs"

ignore_missing_imports = true

# Allows Type[T] to refer to abstract classes, which is not otherwise supported.
# See https://github.com/python/mypy/issues/4717
disable_error_code = "type-abstract"

[tool.pytest.ini_options]
addopts = "-v -p no:warnings -n auto --cov=finesse --cov-report=html:htmlcov/coverage --doctest-modules --ignore=site/ --ignore=docs/"

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
